--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-slick": "^0.29.0",
     "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "swr": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
