--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
     "react-query": "^3.39.3",
+    "react-remove-scroll": "^2.5.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
