--- a/package.json
+++ b/package.json
@@ -3,16 +3,14 @@
   "version": "2.0.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/icons-material": "^5.11.9",
-    "@mui/material": "^5.11.10",
+    "@heroicons/react": "^2.0.16",
+    "@tanstack/react-query": "^4.24.10",
     "axios": "^1.3.4",
     "framer-motion": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-intersection-observer": "^9.4.3",
-    "react-query": "^3.39.3",
     "react-remove-scroll": "^2.5.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
